# RPO2022

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/bmstuDevPo/: MainActivity.java  PinpadActivity.java  TransactionEvents.java
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myapplication/: ExampleUnitTest.java
backend/backend/: pom.xml
backend/backend/src/main/java/com/example/backend/controllers/: ArtistController.java  CountryController.java  UserController.java  (+2 more)
backend/backend/src/main/resources/: application.properties
backend/frontend/src/components/: Alert.jsx  ArtistComponent.jsx  ArtistListComponent.jsx  CountryComponent.jsx  CountryListComponent.jsx  Home.jsx  Login.jsx  MuseumComponent.jsx  MuseumListComponent.jsx  MyAccountComponent.jsx  NavigationBar.jsx  PaginationComponent.jsx  PaintingComponent.jsx  PaintingListComponent.jsx  SideBar.jsx  UserComponent.jsx  UserListComponent.jsx
backend/frontend/src/redux/: actionCreators.js  index.js
backend/frontend/src/redux/reducers/: alert.js  auth.js  index.js
backend/frontend/src/services/: BackendService.js
backend/frontend/src/utils/: countryController.js  utils.js
backend/src/main/java/ru/iu3/backend/controllers/: ArtistController.java  UserController.java
backend/src/main/java/ru/iu3/backend/models/: User.java
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
